--- a/strand/iOS/Strand/Strand/DFSelectablePhotoViewCell.xib
+++ b/strand/iOS/Strand/Strand/DFSelectablePhotoViewCell.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
+        <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
     <objects>
@@ -26,11 +27,21 @@
                             <action selector="selectPhotoButtonPressed:" destination="Lih-fC-ket" eventType="touchUpInside" id="UZa-tx-y5X"/>
                         </connections>
                     </button>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6M1-To-d3U" customClass="LKBadgeView">
+                        <rect key="frame" x="30" y="32" width="22" height="20"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="20" id="AOC-Rg-zva"/>
+                            <constraint firstAttribute="width" constant="22" id="a3J-Ml-UpN"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             </view>
             <color key="backgroundColor" red="0.93333339689999995" green="0.40000003579999999" blue="0.0" alpha="1" colorSpace="deviceRGB"/>
             <constraints>
+                <constraint firstAttribute="trailing" secondItem="6M1-To-d3U" secondAttribute="trailing" constant="8" id="8WM-Rl-Ql5"/>
+                <constraint firstAttribute="bottom" secondItem="6M1-To-d3U" secondAttribute="bottom" constant="8" id="BCa-d1-lj9"/>
                 <constraint firstItem="Hac-QT-qXU" firstAttribute="top" secondItem="Lih-fC-ket" secondAttribute="top" id="FnD-pE-LYU"/>
                 <constraint firstItem="GLf-nM-dzo" firstAttribute="top" secondItem="Lih-fC-ket" secondAttribute="top" constant="8" id="Ix8-zj-3Z4"/>
                 <constraint firstAttribute="bottom" secondItem="Hac-QT-qXU" secondAttribute="bottom" id="Sfq-4z-Udd"/>
@@ -40,6 +51,7 @@
             </constraints>
             <size key="customSize" width="-53" height="-56"/>
             <connections>
+                <outlet property="countView" destination="6M1-To-d3U" id="q5y-X1-nal"/>
                 <outlet property="imageView" destination="Hac-QT-qXU" id="WOx-u3-SfB"/>
                 <outlet property="selectPhotoButton" destination="GLf-nM-dzo" id="3FR-DV-VpV"/>
             </connections>
