Support clusters in the gallery

--- a/strand/iOS/Strand/Strand/DFLabelCollectionViewCell.xib
+++ b/strand/iOS/Strand/Strand/DFLabelCollectionViewCell.xib
@@ -13,7 +13,7 @@
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                 <rect key="frame" x="0.0" y="0.0" width="35" height="35"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iCB-qr-Oq5" customClass="OFElementSquare">
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iCB-qr-Oq5" customClass="DFCircleBadge">
                         <rect key="frame" x="4" y="4" width="27" height="27"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </view>
