--- a/strand/iOS/Strand/Strand/DuffyCore/DFPhotoStackCell.xib
+++ b/strand/iOS/Strand/Strand/DuffyCore/DFPhotoStackCell.xib
@@ -1,71 +1,54 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5056" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
+        <deployment defaultVersion="1792" identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="DFPhotoStackCell">
+        <view clipsSubviews="YES" contentMode="scaleToFill" id="iN0-l3-epB" customClass="DFPhotoStackCell">
             <rect key="frame" x="0.0" y="0.0" width="77" height="77"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cPL-tb-lqo" userLabel="photoImageView">
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cPL-tb-lqo" userLabel="imageView">
                     <rect key="frame" x="0.0" y="0.0" width="77" height="77"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 </imageView>
-                <imageView opaque="NO" userInteractionEnabled="NO" alpha="0.79999999999999982" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Assets/Icons/PhotoStackOverlay.png" translatesAutoresizingMaskIntoConstraints="NO" id="1dA-2O-3kS" userLabel="overlayImageView">
-                    <rect key="frame" x="0.0" y="0.0" width="77" height="77"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="7Db-lH-lQz">
+                    <rect key="frame" x="28" y="29" width="20" height="20"/>
+                </activityIndicatorView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JCs-8c-a7v" customClass="DFCircleBadge">
+                    <rect key="frame" x="49" y="49" width="20" height="20"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="77" id="bM1-UC-QFW"/>
-                        <constraint firstAttribute="width" constant="77" id="u5s-6Q-5vc"/>
+                        <constraint firstAttribute="height" constant="20" id="8X3-Ui-55L"/>
+                        <constraint firstAttribute="width" constant="20" id="PaX-oD-QlE"/>
                     </constraints>
-                </imageView>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2" textAlignment="center" lineBreakMode="clip" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VJ5-MG-akj">
-                    <rect key="frame" x="54" y="55" width="25" height="21"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="21" id="68f-Td-Ptf"/>
-                        <constraint firstAttribute="width" constant="25" id="kS5-lC-hg0"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="boldSystem" pointSize="13"/>
-                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <imageView hidden="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Assets/Icons/LikeOnGalleryIcon" translatesAutoresizingMaskIntoConstraints="NO" id="pZq-TN-Rbk">
-                    <rect key="frame" x="4" y="53" width="20" height="20"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="20" id="4eo-zO-GLw"/>
-                        <constraint firstAttribute="width" constant="20" id="ypo-h9-l6m"/>
-                    </constraints>
-                </imageView>
+                </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="VJ5-MG-akj" secondAttribute="bottom" constant="1" id="2QT-Eh-boW"/>
-                <constraint firstAttribute="bottom" secondItem="pZq-TN-Rbk" secondAttribute="bottom" constant="4" id="Bij-31-zhh"/>
-                <constraint firstAttribute="trailing" secondItem="VJ5-MG-akj" secondAttribute="trailing" constant="-2" id="CUu-3f-Act"/>
-                <constraint firstAttribute="trailing" secondItem="1dA-2O-3kS" secondAttribute="trailing" id="YcT-47-NrT"/>
+                <constraint firstAttribute="centerY" secondItem="7Db-lH-lQz" secondAttribute="centerY" id="SMa-3l-LdJ"/>
+                <constraint firstAttribute="bottom" secondItem="JCs-8c-a7v" secondAttribute="bottom" constant="8" id="TFh-Pq-98M"/>
+                <constraint firstAttribute="centerX" secondItem="7Db-lH-lQz" secondAttribute="centerX" id="UOl-OK-LAG"/>
                 <constraint firstAttribute="bottom" secondItem="cPL-tb-lqo" secondAttribute="bottom" id="YkS-AY-8Ob"/>
                 <constraint firstItem="cPL-tb-lqo" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="gGz-GY-lj4"/>
+                <constraint firstAttribute="trailing" secondItem="JCs-8c-a7v" secondAttribute="trailing" constant="8" id="ot4-q8-vdJ"/>
                 <constraint firstAttribute="trailing" secondItem="cPL-tb-lqo" secondAttribute="trailing" id="r1B-GG-lFa"/>
-                <constraint firstAttribute="bottom" secondItem="1dA-2O-3kS" secondAttribute="bottom" id="sCi-SM-qI7"/>
                 <constraint firstItem="cPL-tb-lqo" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="vk4-Fe-crr"/>
-                <constraint firstItem="pZq-TN-Rbk" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="4" id="zZI-Gl-25w"/>
             </constraints>
+            <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
-                <outlet property="countLabel" destination="VJ5-MG-akj" id="RRl-aZ-neN"/>
-                <outlet property="likeIconImageView" destination="pZq-TN-Rbk" id="oIJ-ux-C4D"/>
-                <outlet property="overlayImageView" destination="1dA-2O-3kS" id="WLk-Su-a3I"/>
-                <outlet property="photoImageView" destination="cPL-tb-lqo" id="JuO-sy-QwP"/>
+                <outlet property="badgeView" destination="JCs-8c-a7v" id="Idr-La-a1v"/>
+                <outlet property="imageView" destination="cPL-tb-lqo" id="4oU-jJ-Kc9"/>
+                <outlet property="loadingActivityIndicator" destination="7Db-lH-lQz" id="8jW-cb-BWI"/>
             </connections>
         </view>
     </objects>
-    <resources>
-        <image name="Assets/Icons/LikeOnGalleryIcon" width="16" height="16"/>
-        <image name="Assets/Icons/PhotoStackOverlay.png" width="16" height="16"/>
-    </resources>
+    <simulatedMetricsContainer key="defaultSimulatedMetrics">
+        <simulatedStatusBarMetrics key="statusBar"/>
+        <simulatedOrientationMetrics key="orientation"/>
+        <simulatedScreenMetrics key="destination" type="retina4"/>
+    </simulatedMetricsContainer>
 </document>
