--- a/strand/iOS/Strand/Strand/DuffyCore/DFPhotoViewCell.xib
+++ b/strand/iOS/Strand/Strand/DuffyCore/DFPhotoViewCell.xib
@@ -21,13 +21,18 @@
                         <constraint firstAttribute="height" constant="15" id="mXG-pu-npc"/>
                     </constraints>
                 </imageView>
+                <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="h88-b8-2wa" userLabel="Loading indicator">
+                    <rect key="frame" x="50" y="50" width="20" height="20"/>
+                </activityIndicatorView>
             </subviews>
             <constraints>
+                <constraint firstAttribute="centerX" secondItem="h88-b8-2wa" secondAttribute="centerX" id="EiX-RP-7kZ"/>
                 <constraint firstAttribute="trailing" secondItem="2gT-dn-UU6" secondAttribute="trailing" id="P3Z-Ut-YxP"/>
                 <constraint firstAttribute="bottom" secondItem="TUZ-FC-zJG" secondAttribute="bottom" constant="4" id="XjO-je-3AU"/>
                 <constraint firstItem="TUZ-FC-zJG" firstAttribute="leading" secondItem="1" secondAttribute="leading" constant="4" id="mcK-kD-M62"/>
                 <constraint firstAttribute="bottom" secondItem="2gT-dn-UU6" secondAttribute="bottom" id="qgQ-L9-sD2"/>
                 <constraint firstItem="2gT-dn-UU6" firstAttribute="leading" secondItem="1" secondAttribute="leading" id="wIE-LC-HI3"/>
+                <constraint firstAttribute="centerY" secondItem="h88-b8-2wa" secondAttribute="centerY" id="wwz-Se-zjA"/>
                 <constraint firstItem="2gT-dn-UU6" firstAttribute="top" secondItem="1" secondAttribute="top" id="xez-Rp-y9J"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
@@ -35,6 +40,7 @@
             <connections>
                 <outlet property="imageView" destination="2gT-dn-UU6" id="nAC-fk-qaT"/>
                 <outlet property="likeIconImageView" destination="TUZ-FC-zJG" id="Yrm-ue-9Ax"/>
+                <outlet property="loadingActivityIndicator" destination="h88-b8-2wa" id="3y9-X2-3eS"/>
             </connections>
         </view>
     </objects>
